SERVER-6207 protect printWindowsStackTrace() with critical section

Use SimpleMutex::scoped_lock to make printWindowsStackTrace() run in
only one thread at a time.